--- a/Practica_3_Backtest_UNIT_TEST_Strategy_V01.ipynb
+++ b/Practica_3_Backtest_UNIT_TEST_Strategy_V01.ipynb
@@ -15,6 +15,9 @@
     "import pickle\n",
     "\n",
     "# hola capullo\n",
+    "# segundo cambio, jbordas\n",
+    "\n",
+    "\n",
     "# -----------------------------------------------------------------------------------------------------------\n",
     "# DATA\n",
     "\n",
